# django-password-history

./: .gitignore  HISTORY.rst  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
django_password_history/: admin.py  models.py
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: README.md  settings.py  test_models.py  urls.py
