[tool.poetry]
name = "django-password-history"
version = "2.0.0"
description = ""
authors = ["Jatin Goel <jatin.goel@thesummitgrp.com>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=3.2.15, <5.0"
django-model-utils = ">=4.2.0"
djangoql = ">=0.15.4"


[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
twine = "^5.0.0"
wheel = "^0.43.0"
zest-releaser = "^9.1.3"
coverage = "^7.4.4"
mock = "^5.1.0"
flake8 = "^7.0.0"
tox = "^4.14.2"
codecov = "^2.1.13"
black = "^24.3.0"
pre-commit = "^3.7.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
